[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/textures/message.png" type="Texture" id=1]
[ext_resource path="res://UI/MenuLayer.gd" type="Script" id=2]
[ext_resource path="res://fonts/flappyfont48.tres" type="DynamicFont" id=3]

[node name="MenuLayer" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="StartMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartMessage" type="TextureRect" parent="StartMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.0
margin_top = -300.0
margin_right = 138.0
margin_bottom = 100.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -219.0
margin_right = 145.0
margin_bottom = 24.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLable" type="Label" parent="GameOverMenu/VBoxContainer"]
margin_right = 289.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 3 )
text = "SCORE: 0"
align = 1

[node name="HighScoreLable" type="Label" parent="GameOverMenu/VBoxContainer"]
margin_top = 69.0
margin_right = 289.0
margin_bottom = 118.0
custom_fonts/font = ExtResource( 3 )
text = "BEST: 0"
align = 1

[node name="RestartButton" type="Button" parent="GameOverMenu/VBoxContainer"]
margin_top = 138.0
margin_right = 289.0
margin_bottom = 193.0
custom_fonts/font = ExtResource( 3 )
text = "RESTART"

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="GameOverMenu/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
